lint: Disable rule "indent-error-flow".

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,7 +25,7 @@ linters-settings:
       - name: receiver-naming
       - name: time-naming
       - name: unexported-return
-      - name: indent-error-flow
+      #- name: indent-error-flow
       - name: errorf
       - name: empty-block
       - name: superfluous-else
