CI: Run lint if ".golangci.yml" was changed.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,12 +5,14 @@ on:
     branches: [ master ]
     paths:
       - '.github/workflows/lint.yml'
+      - '.golangci.yml'
       - '**.go'
       - 'go.*'
   pull_request:
     branches: [ master ]
     paths:
       - '.github/workflows/lint.yml'
+      - '.golangci.yml'
       - '**.go'
       - 'go.*'
 
