--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,6 +19,10 @@ updates:
     directory: /
     schedule:
       interval: daily
+    groups:
+      etcd:
+        patterns:
+        - "go.etcd.io*"
 
   - package-ecosystem: "github-actions"
     directory: "/"
