docker: Create "/.dockerenv" if it doesn't exist.
When building through the CI builders, detection of the Docker environment
doesn't work. So we always create the file manually to make sure the version
contains "~docker" in this case.

--- a/docker/proxy/Dockerfile
+++ b/docker/proxy/Dockerfile
@@ -5,7 +5,8 @@ ARG TARGETOS
 WORKDIR /workdir
 
 COPY . .
-RUN apk add --no-cache bash git build-base protobuf && \
+RUN touch /.dockerenv && \
+    apk add --no-cache bash git build-base protobuf && \
     if [ -d "vendor" ]; then GOOS=${TARGETOS} GOARCH=${TARGETARCH} GOPROXY=off make proxy; else \
     GOOS=${TARGETOS} GOARCH=${TARGETARCH} make proxy; fi
 
