CI: Disable cache for linter to bring back annotations.
Previously, extracting the cache caused lots of errors that filled up
the log and prevented the annotations from being shown.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,3 +40,6 @@ jobs:
         with:
           version: latest
           args: --timeout=2m0s
+          skip-cache: true
+          skip-pkg-cache: true
+          skip-build-cache: true
