CI: Use db-ip.com for tarball tests.

--- a/.github/workflows/tarball.yml
+++ b/.github/workflows/tarball.yml
@@ -88,5 +88,6 @@ jobs:
     - name: Run tests
       env:
         GOPROXY: off
+        USE_DB_IP_GEOIP_DATABASE: "1"
       run: |
         make -C tmp test TIMEOUT=120s
