--- a/proxy.conf.in
+++ b/proxy.conf.in
@@ -25,6 +25,17 @@
 # - etcd: Token information are retrieved from an etcd cluster (see below).
 tokentype = static
 
+# The external hostname for remote streams. Leaving this empty will autodetect
+# and use the first public IP found on the available network interfaces.
+#hostname =
+
+# The token id to use when connecting remote stream.
+#token_id = server1
+
+# The private key for the configured token id to use when connecting remote
+# streams.
+#token_key = privkey.pem
+
 [tokens]
 # For token type "static": Mapping of <tokenid> = <publickey> of signaling
 # servers allowed to connect.
