--- a/server.conf.in
+++ b/server.conf.in
@@ -55,6 +55,12 @@ blockkey = -encryption-key-
 # value as configured in the respective internal services.
 internalsecret = the-shared-secret-for-internal-clients
 
+[federation]
+# If set to "true", certificate validation of federation targets will be skipped.
+# This should only be enabled during development, e.g. to work with self-signed
+# certificates.
+#skipverify = false
+
 [backend]
 # Type of backend configuration.
 # Defaults to "static".
