--- a/server.conf.in
+++ b/server.conf.in
@@ -61,6 +61,9 @@ internalsecret = the-shared-secret-for-internal-clients
 # certificates.
 #skipverify = false
 
+# Timeout in seconds for requests to federation targets.
+#timeout = 10
+
 [backend]
 # Type of backend configuration.
 # Defaults to "static".
