--- a/.github/workflows/generated.yml
+++ b/.github/workflows/generated.yml
@@ -34,6 +34,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          token: ${{ secrets.CODE_GENERATOR_PAT }}
           ref: ${{ github.event.pull_request.head.ref }}
 
       - uses: actions/setup-go@v5
