CI: Always do a full build of generated files.

--- a/.github/workflows/generated.yml
+++ b/.github/workflows/generated.yml
@@ -68,6 +68,7 @@ jobs:
 
       - name: Generate files
         run: |
+          make distclean
           make common
 
       - name: Commit changes
@@ -105,6 +106,7 @@ jobs:
 
       - name: Generate files
         run: |
+          make distclean
           make common
 
       - name: Check generated files
