make: Rename "distclean" target to "clean-generated".
This is to avoid potential problems with packaging systems that call
"make distclean" during their clean stage and with that remove the
generated files.

--- a/.github/workflows/generated.yml
+++ b/.github/workflows/generated.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Generate files
         run: |
-          make distclean
+          make clean-generated
           make common
 
       - name: Commit changes
@@ -106,7 +106,7 @@ jobs:
 
       - name: Generate files
         run: |
-          make distclean
+          make clean-generated
           make common
 
       - name: Check generated files
