docker: Support adding CA certificates to system trust store.

--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -13,17 +13,14 @@ FROM alpine:3
 
 ENV CONFIG=/config/server.conf
 RUN adduser -D spreedbackend && \
-    apk add --no-cache bash tzdata ca-certificates
+    apk add --no-cache bash tzdata ca-certificates su-exec
 
 COPY --from=builder /workdir/bin/signaling /usr/bin/nextcloud-spreed-signaling
 COPY ./server.conf.in /config/server.conf.in
 COPY ./docker/server/entrypoint.sh /
 COPY ./docker/server/stop.sh /
 COPY ./docker/server/wait.sh /
-RUN chown spreedbackend /config
 RUN /usr/bin/nextcloud-spreed-signaling -version
-
-USER spreedbackend
 
 STOPSIGNAL SIGUSR1
 ENTRYPOINT [ "/entrypoint.sh" ]
