--- a/docker/proxy/Dockerfile
+++ b/docker/proxy/Dockerfile
@@ -13,17 +13,14 @@ FROM alpine:3
 
 ENV CONFIG=/config/proxy.conf
 RUN adduser -D spreedbackend && \
-    apk add --no-cache bash tzdata ca-certificates
+    apk add --no-cache bash tzdata ca-certificates su-exec
 
 COPY --from=builder /workdir/bin/proxy /usr/bin/nextcloud-spreed-signaling-proxy
 COPY ./proxy.conf.in /config/proxy.conf.in
 COPY ./docker/proxy/entrypoint.sh /
 COPY ./docker/proxy/stop.sh /
 COPY ./docker/proxy/wait.sh /
-RUN chown spreedbackend /config
 RUN /usr/bin/nextcloud-spreed-signaling-proxy -version
-
-USER spreedbackend
 
 STOPSIGNAL SIGUSR1
 ENTRYPOINT [ "/entrypoint.sh" ]
