--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,7 +5,7 @@ linters:
 
 linters-settings:
   revive:
-    ignoreGeneratedHeader: true
+    ignore-generated-header: true
     severity: warning
     rules:
       - name: blank-imports
