modernize: Replace "interface{}" with "any".

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -29,6 +29,7 @@ linters:
         - name: superfluous-else
         #- name: unused-parameter
         - name: unreachable-code
+        - name: use-any
         - name: redefines-builtin-id
   exclusions:
     generated: lax
