--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,6 +37,20 @@ jobs:
           args: --timeout=2m0s
           skip-cache: true
 
+  modernize:
+    name: golang
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - uses: actions/checkout@v5
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+
+      - name: moderize
+        run: |
+          go run golang.org/x/tools/gopls/internal/analysis/modernize/cmd/modernize@latest -test ./...
+
   dependencies:
     name: dependencies
     runs-on: ubuntu-latest
