--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -12,7 +12,7 @@ RUN touch /.dockerenv && \
 FROM alpine:3
 
 ENV CONFIG=/config/server.conf
-RUN adduser -D spreedbackend && \
+RUN adduser -D -S -H spreedbackend && \
     apk add --no-cache bash tzdata ca-certificates su-exec
 
 COPY --from=builder /workdir/bin/signaling /usr/bin/nextcloud-spreed-signaling
