CI: Disable "stdversion" check of govet.
Using "synctest.Wait" is fine as we set GOEXPERIMENT=synctest when running
affected code.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,6 +3,9 @@ linters:
   enable:
     - revive
   settings:
+    govet:
+      disable:
+        - stdversion
     revive:
       severity: warning
       rules:
