--- a/.codecov.yml
+++ b/.codecov.yml
@@ -14,6 +14,10 @@ ignore:
 
 component_management:
   individual_components:
+    - component_id: module_root
+      name: root
+      paths:
+        - "*.go"
     - component_id: module_api
       name: api
       paths:
