--- a/.github/workflows/tarball.yml
+++ b/.github/workflows/tarball.yml
@@ -44,7 +44,7 @@ jobs:
         name: tarball-${{ matrix.go-version }}
         path: nextcloud-spreed-signaling*.tar.gz
 
-  test:
+  build:
     strategy:
       matrix:
         go-version:
@@ -72,6 +72,30 @@ jobs:
       run: |
         echo "Building with $(nproc) threads"
         make -C tmp build -j$(nproc)
+
+  test:
+    strategy:
+      matrix:
+        go-version:
+          - "1.24"
+          - "1.25"
+    runs-on: ubuntu-latest
+    needs: [create]
+    steps:
+    - uses: actions/setup-go@v6
+      with:
+        go-version: ${{ matrix.go-version }}
+
+    - name: Download tarball
+      uses: actions/download-artifact@v6
+      with:
+        name: tarball-${{ matrix.go-version }}
+
+    - name: Extract tarball
+      run: |
+        mkdir -p tmp
+        tar xvf nextcloud-spreed-signaling*.tar.gz --strip-components=1 -C tmp
+        [ -d "tmp/vendor" ] || exit 1
 
     - name: Run tests
       env:
