--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,6 +62,26 @@ jobs:
       run: |
         make test TIMEOUT=120s
 
+  benchmark:
+    env:
+      MAXMIND_GEOLITE2_LICENSE: ${{ secrets.MAXMIND_GEOLITE2_LICENSE }}
+      USE_DB_IP_GEOIP_DATABASE: "1"
+    strategy:
+      matrix:
+        go-version:
+          - "1.24"
+          - "1.25"
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v6
+    - uses: actions/setup-go@v6
+      with:
+        go-version: ${{ matrix.go-version }}
+
+    - name: Run benchmarks
+      run: |
+        make benchmark
+
   coverage:
     env:
       MAXMIND_GEOLITE2_LICENSE: ${{ secrets.MAXMIND_GEOLITE2_LICENSE }}
