CI: Check that version of tarball builds is not "unknown".

--- a/.github/workflows/tarball.yml
+++ b/.github/workflows/tarball.yml
@@ -72,6 +72,11 @@ jobs:
       run: |
         echo "Building with $(nproc) threads"
         make -C tmp build -j$(nproc)
+        UNKNOWN=$(./tmp/bin/signaling -version | grep unknown || true)
+        if [ -n "$UNKNOWN" ]; then \
+          echo "Found unknown version: $UNKNOWN"; \
+          exit 1; \
+        fi
 
   test:
     strategy:
