--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,9 +1,13 @@
 version: "2"
 linters:
   enable:
+    - errchkjson
     - misspell
     - revive
   settings:
+    errchkjson:
+      check-error-free-encoding: true
+      report-no-exported: true
     govet:
       enable:
         - nilness
