lint: Enable "gocritic" linter.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,12 +3,21 @@ linters:
   enable:
     - errchkjson
     - exptostd
+    - gocritic
     - misspell
     - revive
   settings:
     errchkjson:
       check-error-free-encoding: true
       report-no-exported: true
+    gocritic:
+      disabled-checks:
+        - singleCaseSwitch
+      settings:
+        ifElseChain:
+          # Min number of if-else blocks that makes the warning trigger.
+          # Default: 2
+          minThreshold: 3
     govet:
       enable:
         - nilness
