--- a/.github/workflows/govuln.yml
+++ b/.github/workflows/govuln.yml
@@ -39,4 +39,4 @@ jobs:
       run: |
         set -euo pipefail
         go install golang.org/x/vuln/cmd/govulncheck@latest
-        govulncheck ./...
+        GOEXPERIMENT=synctest govulncheck ./...
