--- a/.codecov.yml
+++ b/.codecov.yml
@@ -30,6 +30,10 @@ component_management:
       name: client
       paths:
         - client/**
+    - component_id: module_container
+      name: container
+      paths:
+        - container/**
     - component_id: module_internal
       name: internal
       paths:
