--- a/.codecov.yml
+++ b/.codecov.yml
@@ -46,6 +46,10 @@ component_management:
       name: metrics
       paths:
         - metrics/**
+    - component_id: module_nats
+      name: nats
+      paths:
+        - nats/**
     - component_id: module_proxy
       name: proxy
       paths:
