--- a/.github/workflows/deploydocker.yml
+++ b/.github/workflows/deploydocker.yml
@@ -1,4 +1,4 @@
-name: Deploy to Docker Hub / GHCR
+name: Deploy to Docker Hub / GHCR / quay.io
 
 on:
   pull_request:
@@ -39,6 +39,7 @@ jobs:
           images: |
             strukturag/nextcloud-spreed-signaling
             ghcr.io/strukturag/nextcloud-spreed-signaling
+            quay.io/strukturag/nextcloud-spreed-signaling
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
@@ -66,6 +67,14 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to quay.io
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_IO_USERNAME }}
+          password: ${{ secrets.QUAY_IO_ACCESS_TOKEN }}
 
       - name: Set up Docker Buildx
         id: buildx
@@ -104,6 +113,7 @@ jobs:
           images: |
             strukturag/nextcloud-spreed-signaling
             ghcr.io/strukturag/nextcloud-spreed-signaling
+            quay.io/strukturag/nextcloud-spreed-signaling
           labels: |
             org.opencontainers.image.title=nextcloud-spreed-signaling-proxy
             org.opencontainers.image.description=Signaling proxy for the standalone signaling server for Nextcloud Talk.
@@ -136,6 +146,14 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to quay.io
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_IO_USERNAME }}
+          password: ${{ secrets.QUAY_IO_ACCESS_TOKEN }}
 
       - name: Set up Docker Buildx
         id: buildx
