--- a/.github/workflows/govuln.yml
+++ b/.github/workflows/govuln.yml
@@ -31,6 +31,7 @@ jobs:
     - uses: actions/setup-go@v6
       with:
         go-version: ${{ matrix.go-version }}
+        check-latest: true
 
     - run: date
 
