CI: Process files in all folders with licensecheck.

--- a/.github/workflows/licensecheck.yml
+++ b/.github/workflows/licensecheck.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           {
             echo 'CHECK_RESULT<<EOF'
-            licensecheck *.go */*.go
+            find -name "*.go" | sort | xargs licensecheck
             echo EOF
           } >> "$GITHUB_ENV"
 
