--- a/.codecov.yml
+++ b/.codecov.yml
@@ -100,6 +100,10 @@ component_management:
       name: security
       paths:
         - security/**
+    - component_id: module_session
+      name: session
+      paths:
+        - session/**
     - component_id: module_sfu
       name: sfu
       paths:
